--- a/css/styles.css
+++ b/css/styles.css
@@ -1,84 +1,86 @@
-* {
-  box-sizing: border-box;
+figure {
+  margin: 0;
 }
 
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
-    'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  color: #2a2a2a;
-}
-
-textarea {
-  resize: none;
-}
-
-.form {
-  width: 600px;
-  outline: 1px solid tomato;
+.container {
+  width: 100%;
+  max-width: 1280;
   margin-left: auto;
   margin-right: auto;
-  padding: 20px;
+  padding: 60px 115px;
+}
+.gallery {
+  display: grid;
+
+  grid-template-columns: repeat(14, 1fr);
+  /* grid-template-rows: repeat(14, 5vw); */
+  grid-template-columns: repeat(14, 40px);
+  grid-gap: 7px;
 }
 
-.form-field {
-  /* 
-  outline: 1px solid blue; */
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
+.gallery__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.form-field label {
-  margin-bottom: 5px;
+.gallery__item--1 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 4;
+  grid-row-end: 7;
 }
-
-.form-field input {
-  margin: 0;
-  padding: 6px 10px;
-  border-radius: 3px;
-  border: 1px solid #2a2a2a;
+.gallery__item--2 {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 3;
+  grid-row-end: 6;
 }
-
-.form-field input::placeholder {
-  color: #2a2a2a;
+.gallery__item--3 {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 6;
+  grid-row-end: 9;
 }
-
-.group {
-  margin-bottom: 20px;
+.gallery__item--4 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 7;
 }
-
-.group-title {
-  margin-top: 0;
-  margin-bottom: 10px;
+.gallery__item--5 {
+  grid-column-start: 5;
+  grid-column-end: 7;
+  grid-row-start: 7;
+  grid-row-end: 11;
 }
-
-.topic-options,
-.experience-options {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+.gallery__item--6 {
+  grid-column-start: 9;
+  grid-column-end: 11;
+  grid-row-start: 3;
+  grid-row-end: 6;
 }
-
-.topic-options li {
-  display: flex;
-  align-items: center;
+.gallery__item--7 {
+  grid-column-start: 9;
+  grid-column-end: 11;
+  grid-row-start: 6;
+  grid-row-end: 9;
 }
-
-.topic-options input[type='checkbox'] {
+.gallery__item--8 {
+  grid-column-start: 11;
+  grid-column-end: 13;
+  grid-row-start: 2;
+  grid-row-end: 6;
 }
-
-.topic-options label {
-  font-size: 20px;
-  margin-left: 10px;
+.gallery__item--9 {
+  grid-column-start: 11;
+  grid-column-end: 13;
+  grid-row-start: 6;
+  grid-row-end: 8;
 }
-
-.form .date {
-  border-width: 2px;
-  border-radius: 4px;
-  padding: 20px 40px;
-}
-
-.comment {
-  padding: 8px;
+.gallery__item--10 {
+  grid-column-start: 13;
+  grid-column-end: 15;
+  grid-row-start: 6;
+  grid-row-end: 7;
 }
